<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="182dp"
        android:layout_height="197dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_title"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:src="@drawable/girl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="136dp"
        android:elevation="15dp"
        android:outlineSpotShadowColor="@color/pink"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="55dp"
                android:layout_height="5dp"
                android:background="@color/pink"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center"
                >

                <EditText
                    android:id="@+id/edt_first_grade"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_background"
                    android:padding="20dp"
                    android:layout_marginEnd="30dp"
                    android:inputType="number"
                    android:maxLines="1"
                    android:hint="@string/hint_first_grade"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/edt_second_grade"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_background"
                    android:padding="20dp"
                    android:inputType="number"
                    android:maxLines="1"
                    android:hint="@string/hint_second_grade"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center"
                >

                <EditText
                    android:id="@+id/edt_third_grade"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_background"
                    android:padding="20dp"
                    android:layout_marginEnd="30dp"
                    android:inputType="number"
                    android:maxLines="1"
                    android:hint="@string/hint_third_grade"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/edt_fourth_grade"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_background"
                    android:padding="20dp"
                    android:inputType="number"
                    android:maxLines="1"
                    android:hint="@string/hint_fourth_grade"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_number_of_absences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_background"
                android:layout_marginHorizontal="24dp"
                android:padding="20dp"
                android:layout_marginTop="30dp"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/hint_number_of_absences"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_button"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="30dp"
                android:text="@string/txt_btn_calculate"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>